# janito

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLI_OPTIONS.md.bak  CNAME  CONFIGURATION.md  CONFIGURATION.md.bak  MANIFEST.in  README.gmail.md  README.md  README.onedrive.md  README_DEV.md  README_ENVIRONMENT.md  README_GMAIL.md  README_LOCAL.md  README_MCP.md  README_custom.md  README_structure.txt  RELEASE_NOTES_1.3.md  RELEASE_NOTES_1.4.md  RELEASE_NOTES_1.5.md  RELEASE_NOTES_1.6.md  TOOL.md  alibaba-qwen3.md  ask_user_tool_description.txt  driver_flow.md.bak  driver_request_cancellation.md.bak  drivers.md.bak  event_bus.md.bak  everlyn_homepage.html  index.html  index.md.bak  interfaces.txt.bak  janito_debug.txt  language-model-clients.md.bak  llm_drivers.md.bak  mkdocs.yml  pyproject.toml  pytest.ini  (+21 more)
CHANGELOG/: index.html
CHANGELOG_3.0.0/: index.html
DIV/: index.html
GETTING_STARTED/: index.html
PROFILES/: index.html
PROVIDERS/: index.html
TOOLBAR-STYLING/: index.html
alibaba-setup/: index.html
alternatives/: index.html
anthropic-setup/: index.html
cerebras-setup/: index.html
cli/: index.html
concepts/: analysis-style.md.bak  index.html  index.md.bak
configuration/: index.html
deepseek-setup/: index.html
docs/: ALTERNATIVES.md  ARCHITECTURE.md  AZURE_OPENAI.md  CHANGELOG.md  CLI_OPTIONS.md  COMMANDS_FORMAT.txt  CONFIGURATION.md  README.md  README_DEV.md  STRUCTURE.md  TOOL.md  USING_DEV_VERSION.md  alibaba-setup.md  cli_model_override.md  cli_reload_command.md  configuration.md  deepseek-setup.md  ibm-setup.md  index.md  minimax-setup.md  moonshot-setup.md  provider-platform-access.md  providers.md  quality_checks.txt  simple_commands_format.txt  str_replace_editor_implementation.md  structure.md  supported-models.md  supported-providers-models.md  tools_index.md  z-ai-setup.md
driver-flow/: index.html
driver-request-cancellation/: index.html
drivers/: index.html
event-bus/: index.html
examples/: loop_protection_tool_example.py
google-setup/: index.html
guides/: configuration.md.bak  developing.md.bak  installation.md.bak  prompt-profiles.md.bak  terminal_shell.md.bak  tools_developer_guide.md.bak  using.md.bak
ibm-setup/: index.html
janito/: README.md  __init__.py  __main__.py  _version.py  analysis.py  auth_config.py  callbacks.py  changeapplier.py  changehistory.py  changeviewer.py  chat_history.py  cli.py  common.py  config.py  config_manager.py  console.py  contentchange.py  fileparser.py  general_config.py  mcp_manager.py  performance_collector.py  privileges.py  progress.py  prompt.py  prompts.py  provider_config.py  provider_registry.py  qa.py  render_prompt.py  review.py  rich_utils.py  scan.py  secrets_config.py  system.py  system_prompt.py  test_file.py  token_report.py  user_prompt.py
janito4/: __init__.py  __main__.py  _version.py  auth_config.py  general_config.py  mcp_client.py  mcp_config.py  mcp_manager.py  provider_config.py  system_prompt.py
llm-drivers/: index.html
llm-drivers-required-config/: index.html
mistral-setup/: index.html
moonshot-setup/: index.html
moonshotai-setup/: index.html
openai-setup/: index.html
plugins/: index.html
provider-platform-access/: index.html
providers/: index.html
pt/: index.html
public-sources/: index.html
reference/: api.md.bak  architecture.md.bak  cli-options.md.bak
search/: search_index.json
security/: index.html
supported-providers-models/: index.html
terms/: index.html
test-venv/: pyvenv.cfg
tests/: powershell_test_output.txt  sample_markdown.md  sample_outline.py  sample_outline_complex.py  test_alibaba_qwen3_max_thinking.py  test_basic.py  test_conversation_history.py  test_ctrl_c_handler.py  test_detect_windows_shell.py  (+30 more)
(+912 files in other folders)
