[project]
name = "janito"

version = "1.7.0-dev"
description = "A Natural Language Programming Agent,"
authors = [
    { name = "João Pinto", email = "joao.pinto@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "docstring-parser",
    "flask",
    "jinja2",
    "openai",
    "pathspec",
    "prompt_toolkit",
    "requests",
    "rich",
    "toml"
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["agent", "framework", "tools", "automation"]
classifiers = [
    "Programming Language :: Python :: 3.10",

    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/joaompinto/janito"
repository = "https://github.com/joaompinto/janito"

[project.scripts]
janito = "janito.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"janito.agent.templates" = ["*", "*/*", "*/*/*"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8"  # Uncomment if you want Material theme
]
