[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "janito4"
dynamic = ["version"]
description = "OpenAI CLI with Function Calling, MCP Support, and Extensible Tools"
readme = "README.md"
authors = [{name = "Janito Developer", email = "developer@example.com"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.6"
dependencies = [
    "openai>=1.0.0",
    "rich>=10.0.0",
    "prompt-toolkit>=3.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/ikignosis/janito4"
Repository = "https://github.com/ikignosis/janito4"

[project.scripts]
janito4 = "janito4.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["janito*"]

[tool.setuptools_scm]
version_scheme = "post-release"
